--- a/views/user/login.twig
+++ b/views/user/login.twig
@@ -1,4 +1,20 @@
-{% extends 'layout.twig' %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>大樓管理測試頁面</title>
+
+{# 如果想導入css，可以在這裡添加 #}
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+{# 這個是bootstrap的鏈接方式，documentation裡面有教程，參照教材內的操作即可 #}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
+  </head>
+</html>
 
 {% block body %}
 <div class="container-fluid">
@@ -12,11 +28,11 @@
 							<br>
 							<form>
 								<div class="form-floating mb-3">
-									<input type="text" class="form-control" id="username" name="username" placeholder="賬戶ID">
+									<input type="text" class="form-control" id="username" name="username" placeholder="賬戶ID" required oninvalid="this.setCustomValidity('請輸入賬戶ID')" oninput="this.setCustomValidity('')">
 									<label for="username">賬戶ID</label>
 								<br>
 								<div class="form-floating mb-3">
-									<input type="password" class="form-control" id="password" name="password" placeholder="密碼">
+									<input type="password" class="form-control" id="password" name="password" placeholder="密碼"  required oninvalid="this.setCustomValidity('請輸入密碼')" oninput="this.setCustomValidity('')">
 									<label for="password">密碼</label>
 								</div>
 								<button type="button" class="btn btn-primary" id="login">登入</button>
