--- a/views/user/register.twig
+++ b/views/user/register.twig
@@ -1,35 +1,52 @@
-{% extends 'layout.twig' %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>大樓管理測試頁面</title>
 
-{% block body %}
-<div class="container-fluid">
-  <div class="row h-100 align-items-center justify-content-center">
-    <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
-      <div class="bg-transparent rounded p-4 p-sm-5 my-4 mx-3">
-        <div class="d-flex align-items-center justify-content-between mb-3">
-          <div class="card col-12">
-            <div class="card-body">
-              <h1 class="card-title">賬戶註冊</h1>
-              <br>
-              <form action="/user/register" method="post">
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="username" name="username" placeholder="username">
-                  <label for="username" class="form-label">賬戶ID</label>
+    {# 如果想導入css，可以在這裡添加 #}
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    {# 這個是bootstrap的鏈接方式，documentation裡面有教程，參照教材內的操作即可 #}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+
+  </head>
+  <body>
+    {% block body %}
+    <div class="container-fluid">
+      <div class="row h-100 align-items-center justify-content-center">
+        <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
+          <div class="bg-transparent rounded p-4 p-sm-5 my-4 mx-3">
+            <div class="d-flex align-items-center justify-content-between mb-3">
+              <div class="card col-12">
+                <div class="card-body">
+                  <h1 class="card-title">賬戶註冊</h1>
+                  <br>
+                  <form action="/user/register" method="post">
+                    <div class="form-floating mb-3">
+                      <input type="text" class="form-control" id="username" name="username" placeholder="username" required oninvalid="this.setCustomValidity('請輸入賬戶ID')" oninput="this.setCustomValidity('')">
+                      <label for="username" class="form-label">賬戶ID</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                      <input type="password" class="form-control" id="password" name="password" placeholder="password" required oninvalid="this.setCustomValidity('請輸入密碼')" oninput="this.setCustomValidity('')">
+                      <label for="password" class="form-label">密碼</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                      <input type="text" class="form-control" id="name" name="name" placeholder="name" required oninvalid="this.setCustomValidity('請輸入顯示名稱')" oninput="this.setCustomValidity('')">
+                      <label for="name" class="form-label">顯示名稱</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">註冊</button>
+                    <p class="mt-3">返回<a href="login">登入</a>頁面</p>
+                  </form>
                 </div>
-                <div class="form-floating mb-3">
-                  <input type="password" class="form-control" id="password" name="password" placeholder="password">
-                  <label for="password" class="form-label">密碼</label>
-                </div>
-                <div class="form-floating mb-3">
-                  <input type="text" class="form-control" id="name" name="name" placeholder="name">
-                  <label for="name" class="form-label">顯示名稱</label>
-                </div>
-                <button type="submit" class="btn btn-primary">註冊</button>
-              </form>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
-{% endblock %}
+    {% endblock %}
+  </body>
+</html>
