--- a/views/message/index.twig
+++ b/views/message/index.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.twig' %}
 {% block body %}
-<h1>報修中心</h1>
+<br><h1>報修中心</h1><br>
     <div class="row">
         <div class="col-4">
             <div class="card">
