--- a/views/user/login.twig
+++ b/views/user/login.twig
@@ -36,7 +36,7 @@
 									<label for="password">密碼</label>
 								</div>
 								<button type="button" class="btn btn-primary" id="login">登入</button>
-								<p class="mt-3">若無賬號，請先<a href="register">註冊</a></p>
+								<p class="mt-3">若無賬號，請先<a href="/user/register">註冊</a></p>
 							</form>
 
 						</div>
