--- a/views/layout.twig
+++ b/views/layout.twig
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>大樓管理測試頁面</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- Add your CSS stylesheets here -->
 
     <!-- Add your Bootstrap CSS and JS links here -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
@@ -33,11 +35,11 @@
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                會員
+                {{user}}
               </a>
               <ul class="dropdown-menu">
                 {% if (user) %}
-                <li><a class="dropdown-item" href="/user">會員中心</a></li>
+                <li><a class="dropdown-item" href="#">目前使用者 : {{ user }}</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="/user/logout">登出</a></li>
                 {% else %}
