--- a/views/message/index.twig
+++ b/views/message/index.twig
@@ -2,10 +2,10 @@
 {% block body %}
 <title>報修中心</title>
 <br><h1>報修中心</h1><br>
-    <div class="row">
+    <div class="row ">
         <div class="col-4">
             <div class="card">
-                <div class="card-header">報修</div>                
+                <div class="card-header bg-primary text-white h5"><i class="bi bi-tools"></i> 報修記錄</div>                
                 <div class="card-body">
                     <form>
                         <div class="mb-3">
