--- a/views/user/login.twig
+++ b/views/user/login.twig
@@ -20,9 +20,8 @@
 			<div class="bg-transparent rounded p-4 p-sm-5 my-4 mx-3">
 				<div class="d-flex align-items-center justify-content-between mb-3">
 					<div class="card col-12">
+						<div class="card-header bg-primary text-white h3 d-flex justify-content-center align-items-center">賬戶登入</div>
 						<div class="card-body">
-							<h1 class="card-title">賬戶登入</h1>
-							<br>
 							<form>
 								<div class="form-floating mb-3">
 									<input type="text" class="form-control" id="username" name="username" placeholder="賬戶ID" required oninvalid="this.setCustomValidity('請輸入賬戶ID')" oninput="this.setCustomValidity('')">
@@ -32,8 +31,10 @@
 									<input type="password" class="form-control" id="password" name="password" placeholder="密碼"  required oninvalid="this.setCustomValidity('請輸入密碼')" oninput="this.setCustomValidity('')">
 									<label for="password">密碼</label>
 								</div>
-								<button type="button" class="btn btn-primary" id="login">登入</button>
-								<p class="mt-3">若無賬號，請先<a href="/user/register">註冊</a></p>
+								<div class="d-flex justify-content-center">
+									<button type="button" class="btn btn-primary" id="login">登入</button>
+								</div>
+								<p class="mt-3 text-center">若無賬號，請先<a href="/user/register">註冊</a></p>
 							</form>
 
 						</div>
@@ -45,3 +46,4 @@
 </div>
 <script src="/javascript/user.js"></script>
 {% endblock %}
+</html>
