--- a/views/layout.twig
+++ b/views/layout.twig
@@ -22,19 +22,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item {% if activePage == 'index' %}active{% endif %}">
-              <a class="nav-link" href="/"><i class="bi bi-house"></i> 主頁</a>
+              <a class="nav-link text-white" href="/"><i class="bi bi-house "></i> 主頁</a>
             </li>
             <li class="nav-item {% if activePage == 'itemlist' %}active{% endif %}">
-              <a class="nav-link" href="/itemlist"><i class="bi bi-people"></i> 房客資料管理</a>
+              <a class="nav-link text-white" href="/itemlist"><i class="bi bi-people"></i> 房客資料管理</a>
             </li>
             <li class="nav-item {% if activePage == 'visitors' %}active{% endif %}">
-              <a class="nav-link" href="/visitors"><i class="bi bi-person-badge"></i> 訪客資料管理</a>
+              <a class="nav-link text-white" href="/visitors"><i class="bi bi-person-badge"></i> 訪客資料管理</a>
             </li>
             <li class="nav-item {% if activePage == 'message' %}active{% endif %}">
-              <a class="nav-link" href="/message"><i class="bi bi-tools"></i> 報修中心</a>
+              <a class="nav-link text-white" href="/message"><i class="bi bi-tools"></i> 報修中心</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 {{user}}
               </a>
               <ul class="dropdown-menu">
