--- a/views/user/index.twig
+++ b/views/user/index.twig
@@ -14,6 +14,12 @@
         font-size: 1.5rem;
     }
 </style>
+
+<a class="weatherwidget-io" href="https://forecast7.com/zh-tw/24d16120d67/taichung/" data-label_1="台中市" data-label_2="天氣" data-font="Noto Sans TC" data-icons="Climacons Animated" >台中市 天氣</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
+
 <br>
 <div class="row justify-content-center">
   <div class="col-3">
