--- a/views/user/register.twig
+++ b/views/user/register.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="/javascript/register.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- Add your CSS stylesheets here -->
 
@@ -22,7 +23,7 @@
             <div class="card col-12">
               <div class="card-header bg-primary text-white h3 d-flex justify-content-center align-items-center">賬戶註冊</div>
               <div class="card-body">
-                <form action="/user/register" method="post">
+                <form id="register-form" action="/user/register" method="post">
                   <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="username" name="username" placeholder="username" required oninvalid="this.setCustomValidity('請輸入賬戶ID')" oninput="this.setCustomValidity('')">
                     <label for="username" class="form-label">賬戶ID</label>
@@ -40,6 +41,7 @@
                     <label for="name" class="form-label">顯示名稱</label>
                   </div>
                   <div class="d-flex justify-content-center">
+                    <div id="error-message" style="color: red;"></div>
                     <button type="submit" class="btn btn-primary">註冊</button>
                   </div>
                   <p class="mt-3 text-center">返回<a href="/user/login">登入</a>頁面</p>
@@ -52,21 +54,4 @@
     </div>
   </div>
 {% endblock %}
-<script>
-  // Function to check if the passwords match
-  function checkPasswordMatch() {
-    var password = document.getElementById("password").value;
-    var confirmPassword = document.getElementById("confirmPassword").value;
-
-    if (password != confirmPassword) {
-      document.getElementById("registerButton").disabled = true;
-    } else {
-      document.getElementById("registerButton").disabled = false;
-    }
-  }
-
-  // Add event listener to check password match on input change
-  document.getElementById("password").addEventListener("input", checkPasswordMatch);
-  document.getElementById("confirmPassword").addEventListener("input", checkPasswordMatch);
-</script>
 </html>
