--- a/views/user/register.twig
+++ b/views/user/register.twig
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="/javascript/register.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- Add your CSS stylesheets here -->
 
@@ -23,7 +22,7 @@
             <div class="card col-12">
               <div class="card-header bg-primary text-white h3 d-flex justify-content-center align-items-center">賬戶註冊</div>
               <div class="card-body">
-                <form id="register-form" action="/user/register" method="post">
+                <form action="/user/register" method="post">
                   <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="username" name="username" placeholder="username" required oninvalid="this.setCustomValidity('請輸入賬戶ID')" oninput="this.setCustomValidity('')">
                     <label for="username" class="form-label">賬戶ID</label>
@@ -35,14 +34,14 @@
                   <div class="form-floating mb-3">
                     <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="confirm password" required oninvalid="this.setCustomValidity('請確認密碼')" oninput="this.setCustomValidity('')">
                     <label for="confirmPassword" class="form-label">確認密碼</label>
+                    <div id="passwordMatchError" class="text-danger"></div>
                   </div>
                   <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="name" name="name" placeholder="name" required oninvalid="this.setCustomValidity('請輸入顯示名稱')" oninput="this.setCustomValidity('')">
                     <label for="name" class="form-label">顯示名稱</label>
                   </div>
                   <div class="d-flex justify-content-center">
-                    <div id="error-message" style="color: red;"></div>
-                    <button type="submit" class="btn btn-primary">註冊</button>
+                    <button type="submit" class="btn btn-primary" id="register">註冊</button>
                   </div>
                   <p class="mt-3 text-center">返回<a href="/user/login">登入</a>頁面</p>
                 </form>
@@ -53,5 +52,6 @@
       </div>
     </div>
   </div>
+  <script src="/javascript/register.js"></script>
 {% endblock %}
 </html>
