--- a/views/itemlist/index.twig
+++ b/views/itemlist/index.twig
@@ -45,14 +45,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for row in rows %}
+                            {% for row in rows %}  
                             <tr>
                                 <td>{{row['id']}}</td>
                                 <td>{{row['quantity']}}</td>
                                 <td>{{row['itemcode']}}</td>
                                 <td>{{row['price']}}</td>
-                                <td><button type="edit" id="edit-itemlist" class="btn btn-primary">編輯</button>
-                                    <button type="delete" id="delete-itemlist" class="btn btn-danger" onclick="deleteItem({{row['id']}})">刪除</button></td>
+                                <td>
+                                    <button type="delete" data-id="{{row['id']}}" class="btn btn-danger">刪除</button>
+                                </td>
                             </tr>
                             {% endfor %}
                         </tbody>
